--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,208 +1,133 @@
-/*
-*****************************
-* =Global Styles
-*****************************
-*/
 body{
 	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-family: 'Open Sans', sans-serif;
 }
 
+html {
+	background-color: #4F6D7A;
+	position: relative;
+	box-sizing: border-box;
+}
 
-
-/*
-*****************************
-* =layout
-*****************************
-*/
-
-
+h1{
+	color: #F3B703;
+	font-size: 2.5em;
+	text-align: center;
+	height: 10%;
+	font-family: 'Permanent Marker', cursive;
+	display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 .container{
-	max-width: 100%;
-	margin: auto 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 100vh;
 }
 
-nav{
-	width: 20%;
-	margin-top: 40px;
-	float: left;
-	height: 300px;
-	padding-bottom: 100px;
-	margin-right: 10px;
-	margin-left: 10px;
-	background-color: #2C3e50;
-	border-radius: 10px;
-	
-
-}
-
-.main-container{
-	background-color: #3498db;
-	width: 100%;
-	clear: both;
-
-}
-
-
-.etch-frame{
-	margin: 40px 100px ;
-	width: 700px;
-	height: 500px;
-	float: left;
-	background-color: #E74C3C;
+.frame{
+	width: 60%;
+	height: 37em;
+	background-color: #DB504A;
 	border-radius: 10px;
 	position: relative;
-
+	text-align: center;
 }
 
 .grid{
-	background-color: #ECF0F1;
-	height: 400px;
-	width: 600px;
-	margin: 50px 50px;
+	background-color: #F4F3EE;
+	height: 80%;
+	margin: 0 9%;
 	border-radius: 10px;
 	box-shadow: inset 0 0 5px #000;
 	overflow: hidden;
 }
 
-header{
-	background-color: #2C3e50;
-	height: 90px;
-}
-
-footer{
-	background-color: #2C3e50;
-	clear: both;
-	height: 100px;
-	margin-bottom: 0;
-	font-size: 16px;
-	color: white;
-}
-
-
-
-/*
-*****************************
-* ==Header styles
-*****************************
-*/
-
-h1{
-	color: white;
-	padding-left: 100px;
-	padding-top: 20px;
-	font-size: 36px;
-	margin-bottom: 20px;
-	text-align: center;
-}
-
-
-
-/*
-*****************************
-* =Knobs
-*****************************
-*/
-
-.right-knob{
-	background-color: white;
-	width: 40px;
-	height: 40px;
+.knob {
+	background-color: #F5F5F5;
+	width: 4em;
+	height: 4em;
 	position: absolute;
 	bottom: 0;
-	left: 0;
 	border-radius: 100%;
-	margin: 10px;
+	margin: 0.6em;
+	cursor: pointer;
+}
+
+.knob__left {
+	left: 0;
 	box-shadow: 3px 3px 6px -1px #000;
 }
 
-.left-knob{
-	background-color: white;
-	width: 40px;
-	height: 40px;
-	position: absolute;
-	bottom: 0;
+.knob__right {
 	right: 0;
-	border-radius: 150%;
-	margin: 10px;
 	box-shadow: -3px 3px 6px -1px #000;
 }
 
-/*
-*****************************
-* =typography
-*****************************
-*/
-
-h2{
-	position: absolute;
-	margin-left: 250px;
-	padding: 10px;
-	color: gold;
-	font-family: Monotype Corsiva;
-	font-size: 30px;
-	text-align: center;
-}
-
-
-
-/*
-*****************************
-* =nav
-*****************************
-*/
-
-button{
-	background-color: #2980B9;
-	border: 1px solid;
-	color: white;
-	font-weight: bold;
-	font-size: 16px;
-	padding: 20px;
-	border: 0;
-	border-radius: 10px;
-	width: 70%;
-	margin-left: 40px;
-
-
-}
-
-.rainbow, .btn-clear{
-	margin-top: 40px;
-	outline: 0;
-}
-
-button:hover{
-	background-color: #55a5d9; 
-}
-
-/*
-*****************************
-* =footer
-*****************************
-*/
-
-p{
-	text-align: left;
-	padding-top: 30px;
-	padding-left:20px;
-}
-
-
-/*
-*****************************
-* =grid
-*****************************
-*/
-
-
-
-
-
-.square{
-	outline: 1px solid #ECF0F1;
+.knob__text {
+	display: block;
 	position: relative;
+	top: 50%;
+	transform: translateY(-50%);
+	font-family: 'Permanent Marker', cursive;
+	color: #777;
+}
+
+.row {
+	width: 100%;
+	float: left;
+}
+
+.cell{
 	display: inline-block;
+	height: 100%;
 }
 
 
+@media only screen and (min-width: 1500px) {
+	.frame{
+		width: 50%;
+		height: 43em;
+	}
+}
+
+@media only screen and (max-width: 1150px) {
+	.frame{
+		width: 70%;
+	}
+}
+
+@media only screen and (max-width: 768px) {
+	h1 {
+		font-size: 1.6em;
+	}
+
+	.frame{
+		height: 31em;
+		width: 80%;
+	}
+
+	.knob {
+		width: 3em;
+		height: 3em;
+	}
+}
+
+@media only screen and (max-width: 599px) {
+	.frame{
+		width: 90%;
+		height: 25em;
+	}
+
+	.knob {
+		width: 2.5em;
+		height: 2.5em;
+		margin: 0.3em;
+	}
+
+	.knob__text {
+		font-size: 0.5em
+	}
+}
